# OtusCPP

./: .gitignore  .travis.yml  Doxyfile  README.md  annotated.html  dir_467a690bcce2700929a76c016994db9a.html  globals.html  index.html  inherit_graph_0.md5  inherit_graph_1.map  main_8cpp__incl.map  structis__container_3_01std_1_1list_3_01_t_01_4_01_4__coll__graph.md5
.github/workflows/: 01_github_actions.yml  02_ip_filtration.yml  03_allocator.yml  05_print_ip.yml  cmake.yml  release.yml
01_Github_actions/: CMakeLists.txt  hello_test.cpp  main.cpp
02_IP_filter/: CMakeLists.txt  ip_filter.cpp  ip_filter.h  main.cpp  tests.cpp
03_Allocator/: CMakeLists.txt  MyAllocator.cpp  MyAllocator.h  lib.cpp  main.cpp  tests.cpp  vector.h
04_IP_filter_ranges/: CMakeLists.txt  ip_filter.cpp  ip_filter.h  main.cpp  profile.h  test.cpp
05_Print_IP/: CMakeLists.txt  main.cpp
06_Editor/: CMakeLists.txt  IO.h  Primitive.h  Redactor.h  RedactorController.h  RedactorView.h  main.cpp
06_Matrix/: CMakeLists.txt  Matrix.h  main.cpp  tests.cpp
08_Cmd/: CMakeLists.txt  main.cpp  processing.h  tests.cpp
09_Boost/: CMakeLists.txt  FileScanner.cpp  FileScanner.h  FileSystem.cpp  FileSystem.h  HashTree.cpp  HashTree.h  REDMDE.md  main.cpp
10_Async_Cmd/: BlockPrinter.cpp  BlockSaver.cpp  BlockSaver.h  CMakeLists.txt  main.cpp  processing.h  tests.cpp
10_Async_Cmd_2/: BlockPrinter.cpp  BlockPrinter.h  BlockSaver.cpp  CMakeLists.txt  async.cpp  async.h  main.cpp  tests.cpp
11_Async_Cmd_network/: BlockPrinter.cpp  BlockProcessor.cpp  BlockProcessor.h  CMakeLists.txt  Client.h  ClientMain.cpp  Logger.h  Observer.h  Server.h  ServerMain.cpp  tests.cpp
12_Join_server/: CMakeLists.txt  DB.h  Server.h  ServerMain.cpp  tests.cpp
13_BigData/: CMakeLists.txt  MapReduce.cpp  emails.txt
13_BigData/homework/: client.cpp  client.h  mapreduce.h  tests.cpp
BoostASIO/: CMakeLists.txt  asio_async_client.cpp  asio_async_server.cpp  asio_client.cpp  asio_resolver.cpp  asio_server.cpp  asio_timer.cpp  chat_client.cpp  chat_server.cpp  poco_big.cpp  zeromq_publisher.cpp  zeromq_subscriber.cpp
docs/html/: globals_func.html  graph_legend.html  hierarchy.html  inherit_graph_0.map  inherits.html  structis__container_3_01std_1_1list_3_01_t_01_4_01_4.html  structis__container_3_01std_1_1vector_3_01_t_01_4_01_4.html  structis__container_3_01std_1_1vector_3_01_t_01_4_01_4__coll__graph.map
docs/html/search/: all_2.js  classes_0.js  searchdata.js
docs/latex/: files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  structis__container.tex  structis__container_3_01std_1_1list_3_01_t_01_4_01_4__coll__graph.md5  structis__container_3_01std_1_1vector_3_01_t_01_4_01_4__inherit__graph.md5  structis__container__inherit__graph.md5
html/: classes.html  files.html  inherit_graph_1.md5  main_8cpp.html  main_8cpp__incl.md5  structis__container.html  structis__container_3_01std_1_1list_3_01_t_01_4_01_4__inherit__graph.map  structis__container_3_01std_1_1vector_3_01_t_01_4_01_4__coll__graph.md5  structis__container__inherit__graph.map  structis__container__inherit__graph.md5
latex/: annotated.tex  dir_467a690bcce2700929a76c016994db9a.tex  hierarchy.tex  structis__container_3_01std_1_1list_3_01_t_01_4_01_4.tex  structis__container_3_01std_1_1vector_3_01_t_01_4_01_4.tex
webinar_23_multithreading/: .clang-format  01_thread.cpp  02_mutex.cpp  03_promise.cpp  04_async.cpp  README.md
webinar_24_multithreadingpatterns/: CMakeLists.txt  active_object.cpp  barrier.cpp  double_checked_locking.cpp  guarded_suspension.cpp  thread_pool.cpp
webinar_25_async/: CMakeLists.txt  cashier_events.cpp  cashier_reader.cpp  events.cpp  promise.cpp  thread_pool.cpp  threads.cpp
